--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
 </head>
 
 <body>
-
+<div class="wrapper">
+    <div class="slider-container">
+        <div class="slider">
+            <div class="image">
+                <img src="images/bg2.jpeg" alt="">
+            </div>
+            <div class="text-container upper">
+                
+            </div>
+            <div class="text-container lower">
+                
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
