--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <img src="images/bg2.jpeg" alt="">
             </div>
             <div class="text-container upper">
-                
+                <h1 class="slide-title">Digial Agency</h1>
             </div>
             <div class="text-container lower">
-                
+                <h1 class="slide-title">strive fro awesomeness.</h1>
             </div>
         </div>
     </div>
